--- a/ImportStudentV2/ImportStudentV2.csproj
+++ b/ImportStudentV2/ImportStudentV2.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="NPOI" Version="2.5.5" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
   </ItemGroup>
 
   <ItemGroup>
